# petnames-generator

./: CHANGELOG.md  Cargo.toml  Dockerfile  README.md  fly.toml
.github/: dependabot.yml
.github/workflows/: audit.yml  changelog.yml  ci.yml  deploy.yml  release.yml
src/: build.rs  main.rs  metric.rs  render.rs  statics.rs  tests.rs
static/: gh-fork-ribbon.css
templates/: bad_request.rs.html  base.rs.html  index.rs.html  not_found.rs.html
