[package]
name = "petnames-generator"
authors = ["Valentin Brandl <vbrandl@riseup.net>"]
version = "0.16.0"
edition = "2021"

build = "src/build.rs"

[dependencies]
anyhow = "1.0.71"
axum = { version = "0.6.18", features = ["headers"] }
headers = "0.3.8"
hyper = { version = "0.14.26", features = ["full"] }
lazy_static = "1.4.0"
metrics = "0.21.0"
metrics-exporter-prometheus = "0.12.1"
mime = "0.3"
petname = { version = "1.1.3", default-features = false, features = [ "default_dictionary", "std_rng" ] }
rand = { version = "0.8.5", default-features = false, features = ["std_rng"] }
serde = { version = "1.0.163", features = ["derive"] }
tokio = { version = "1.28.1", features = ["full"] }
tower-http = { version = "0.4.0", features = ["trace", "request-id"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }

[dev-dependencies]
quickcheck = { version = "1.0.3", default-features = false }
quickcheck_macros = "1.0.0"
tower = { version = "0.4.13", features = ["util"] }

[build-dependencies]
anyhow = "1.0.71"
ructe = { version = "0.16.1", features = ["mime03"] }
vergen = { version = "8.1.3", default-features = false, features = ["git", "gitoxide"] }
