[package]
name = "petnames-generator"
authors = ["Valentin Brandl <vbrandl@riseup.net>"]
version = "0.18.0"
edition = "2021"

build = "src/build.rs"

[dependencies]
anyhow = "1.0.77"
axum = "0.7.3"
axum-extra = { version = "0.9.0", default-features = false, features = [ "typed-header" ] }
headers = "0.4.0"
lazy_static = "1.4.0"
metrics = "0.21.1"
metrics-exporter-prometheus = "0.13.0"
mime = "0.3"
petname = { version = "1.1.3", default-features = false, features = [ "default_dictionary", "std_rng" ] }
rand = { version = "0.8.5", default-features = false, features = ["std_rng"] }
serde = { version = "1.0.193", features = ["derive"] }
tokio = { version = "1.35.1", features = ["full"] }
tower-http = { version = "0.5.0", features = ["trace", "request-id"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

[dev-dependencies]
quickcheck = { version = "1.0.3", default-features = false }
quickcheck_macros = "1.0.0"
tower = { version = "0.4.13", features = ["util"] }

[build-dependencies]
anyhow = "1.0.77"
ructe = { version = "0.17.0", features = ["mime03"] }
vergen = { version = "8.2.6", default-features = false, features = ["git", "gitoxide"] }
